syntax = "proto3";

package damp;

option go_package = "github.com/brotherlogic/damp/proto";

message Release {
    int32 id = 1;
}

message Matcher {
    string name = 1;
    repeated int32 release_id = 2;
}

message StoredMatcher {
    string name = 1;
    string release_ids = 2;
}

message User {
    int64 user_id = 1;
    string token = 2;
    repeated int32 owned_releases = 3;
    string image_url = 4;
}